@@ -126,28 +126,7 @@ if(.Platform$OS.type != "windows")
   Sys.setlocale("LC_MESSAGES","C")
 <<diagnose-lib, echo=FALSE>>=
 if(nzchar(Sys.getenv("R_MM_PKG_CHECKING"))) print( .libPaths() )
-## MM_FIXME_  this will be part  'sfsmisc' package!
-capture.and.write <- function(EXPR, first, last = 2,
-                              middle = NA, i.middle,
-                              dotdots = " ....... ", n.dots = 2) {
-    co <- capture.output(EXPR)
-    writeLines(head(co, first))
-    catDots <- function(M) cat(rep.int(paste(dotdots,"\n", sep=""), M), sep="")
-    catDots(n.dots)
-    if(is.numeric(middle)) {
-        stopifnot(length(middle) == 1, middle >= 0, middle == round(middle))
-        i0 <- first+2
-        if(missing(i.middle)) {
-            i.middle <- max(i0, length(co) %/% 2 - middle %/% 2)
-        } else { ## !missing(i.middle)
-            if(i.middle < i0)
-                stop("'i.middle' is too small, should be at least ", i0)
-        }
-        writeLines(co[i.middle-1 + seq_len(middle)])
-        catDots(n.dots)
-    }
-    writeLines(tail(co, last))
-}
+stopifnot(require("sfsmisc"))
 @
 \section[Introduction]{Introduction}% \small~\footnote{\mythanks}}
 
@@ -201,7 +180,7 @@ Or for the 80-th Pascal triangle row, $\binom{n}{k}$ for $n=80$ and $k=1,\dots,n
 <<chooseM-ex-fake,eval=false>>=
 chooseMpfr.all(n = 80)
 <<chooseM-run,echo=false>>=
-capture.and.write(
+capture.and.write(# <- in package 'sfsmisc': ~/R/Pkgs/sfsmisc/R/misc-goodies.R
 <<chooseM-ex-fake>>
                   , 5, 2, middle = 4, i.middle = 13)
 @
