@@ -1,3 +1,8 @@
+2012-06-16  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/gmp-convert.R (.bigz2mpfr, .bigq2mpfr): new optional argument
+	\code{precB}, typically for increasing the default precision.
+
 2012-06-04  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/optimizers.R (optimizeR): new simple golden ratio, thanks to
